# chatgptyardagenew

./: .gitignore  README.md
gptgolf/: CMakeLists.txt  README.md
gptgolf/devplan/: Newdevplan.md  development-tasks.md  golf-development-plan.md  golf-tech-implementation.md  golf-tech-requirements.md
gptgolf/docs/: improvement_plan.md  testing-implementation.md  ui-improvement-plan.md
gptgolf/docs/technical/: API.md  MaintenanceGuide.md  TroubleshootingGuide.md
gptgolf/docs/user/: UserGuide.md
gptgolf/frontend/: package.json  tsconfig.json
gptgolf/frontend/public/: index.html  manifest.json
gptgolf/frontend/public/models/shot-prediction/: model.json
gptgolf/frontend/src/: App.css  App.tsx  index.css  setupTests.ts  test-utils.ts
gptgolf/frontend/src/components/: ErrorBoundary.module.css  ErrorBoundary.tsx
gptgolf/frontend/src/components/Performance/: PerformanceMonitor.module.css  PerformanceMonitor.tsx
gptgolf/frontend/src/components/Performance/__tests__/: PerformanceMonitor.test.tsx
gptgolf/frontend/src/components/RealTimeData/: DataStream.module.css  DataStream.tsx
gptgolf/frontend/src/components/ShotCalculator/: AdjustedDistance.module.css  AdjustedDistance.tsx  ClubSelector.module.css  ClubSelector.tsx  DistanceInput.module.css  DistanceInput.tsx  ShotAnalysis.module.css  ShotAnalysis.tsx  ShotCalculator.module.css  TrajectoryView.tsx  WeatherInfo.module.css  WeatherInfo.tsx  index.tsx
gptgolf/frontend/src/components/ShotCalculator/__tests__/: AdjustedDistance.test.tsx  ShotAnalysis.test.tsx  ShotCalculator.test.tsx  ShotCalculatorBasic.test.tsx  ShotCalculatorComponent.test.tsx
gptgolf/frontend/src/components/ShotVisualizer/: ShotVisualizer.module.css  ShotVisualizer.tsx
gptgolf/frontend/src/components/ShotVisualizer/__tests__/: ShotVisualizer.test.tsx
gptgolf/frontend/src/components/__tests__/: App.spec.tsx  ErrorBoundary.test.tsx
gptgolf/frontend/src/hooks/: useLaunchMonitor.ts  useShotPrediction.ts  useWeather.ts
gptgolf/frontend/src/hooks/__tests__/: useShotPrediction.test.ts  useShotPrediction.test.tsx
gptgolf/frontend/src/types/: jest-dom.d.ts  jest.d.ts  test-environment.d.ts  test-mocks.d.ts  three-modules.d.ts
gptgolf/frontend/src/utils/: ab-testing.ts  analytics-system.ts  error_tracker.ts  feedback-system.ts  performance-monitor.ts  shot-performance-monitor.ts
gptgolf/frontend/src/utils/__tests__/: shot-performance-monitor.test.ts
gptgolf/include/data/: baseline_data.h  club_analysis.h  gcquad_protocol.h  launch_monitor.h  launch_monitor_protocol.h  sqlite_storage.h  storage.h  trackman_protocol.h
gptgolf/include/ml/: data_collector.h  player_model.h  prediction_model.h
gptgolf/include/physics/: atmosphere.h  physics.h  physics_validation.h  trajectory.h  vector3d.h  wind.h
gptgolf/include/weather/: terrain_analyzer.h  weather_api.h  weather_data.h  weather_storage.h
gptgolf/server/: .env.example  package.json  server.js
gptgolf/src/: main.cpp
gptgolf/src/data/: baseline_data.cpp  club_analysis.cpp  gcquad_monitor.cpp  gcquad_monitor.h  gcquad_protocol.cpp  launch_monitor_factory.cpp  sqlite_storage.cpp  trackman_monitor.cpp  trackman_monitor.h  trackman_protocol.cpp
gptgolf/src/ml/: data_collector.cpp  player_model.cpp  prediction_model.cpp
gptgolf/src/physics/: atmosphere.cpp  physics.cpp  trajectory.cpp  wind.cpp
gptgolf/src/weather/: temp_test_file.txt  weather_api.cpp  weather_data.cpp  weather_storage.cpp
gptgolf/tests/data/: baseline_test.cpp  gcquad_test.cpp  launch_monitor_test.cpp  protocol_test.cpp
gptgolf/tests/performance/: performance_test.cpp
gptgolf/tests/physics/integration/: physics_integration_test.cpp  wind_integration_test.cpp
gptgolf/tests/physics/unit/: atmosphere_test.cpp  trajectory_test.cpp  wind_test.cpp
gptgolf/tests/validation/: accuracy_test.cpp
gptgolf/tests/weather/: weather_api_test.cpp  weather_storage_test.cpp
